# AMAZING

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  install-mlx-fish.sh  maze.txt  mazegen-1.0.0-py3-none-any.whl  pyproject.toml  pyrightconfig.json  terminal  test_complete.py  test_imports.py
docs/: algorithm.md  api.md  project.md
examples/: simple_usage.py
mazegen/: __init__.py  algorithms.py  config.py  display.py  generator.py  pattern42.py  solver.py  utils.py
mazegen.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: config_parser.py  output_writer.py  terminal_visualizer.py  visualizer.py
tests/: test_config.py  test_generator.py
